// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Database events fetches multiple events with case insensitive words 1`] = `
[
  {
    "id": "",
    "name": "CS9999 Introduction to Testing - Lecture (Sem 1)",
    "owner": {
      "name": "user",
    },
  },
  {
    "id": "",
    "name": "CS9999 Introduction to Testing - Tutorial (Sem 1)",
    "owner": {
      "name": "user",
    },
  },
]
`;

exports[`Database events fetches multiple events with prefix 1`] = `
[
  {
    "id": "",
    "name": "CS9999 Introduction to Testing - Tutorial (Sem 1)",
    "owner": {
      "name": "user",
    },
  },
  {
    "id": "",
    "name": "CS9999 Introduction to Testing - Tutorial (Sem 2)",
    "owner": {
      "name": "user",
    },
  },
]
`;

exports[`Database follows inserts, fetches and deletes a follow 1`] = `
[
  {
    "email": "yonghu22@test.example.org",
    "id": "",
    "name": "用户",
    "status": "pending",
  },
]
`;

exports[`Database follows inserts, fetches and deletes a follow 2`] = `
[
  {
    "email": "user22@test.example.com",
    "id": "",
    "name": "user",
    "status": "active",
  },
]
`;

exports[`Database follows inserts, fetches and deletes a follow 3`] = `[]`;

exports[`Database notes inserts, fetches and deletes a note 1`] = `
[
  {
    "note": {
      "content": "Test note",
      "id": "",
      "position": 2024-01-01T05:00:00.000Z,
      "sender": {
        "id": "",
        "name": "user",
      },
      "timeSent": 2024-01-01T04:00:00.000Z,
    },
    "read": true,
  },
]
`;

exports[`Database notes inserts, fetches and deletes a note 2`] = `
[
  {
    "note": {
      "content": "Test note",
      "id": "",
      "position": 2024-01-01T05:00:00.000Z,
      "sender": {
        "id": "",
        "name": "user",
      },
      "timeSent": 2024-01-01T04:00:00.000Z,
    },
    "read": false,
  },
]
`;

exports[`Database notes inserts, fetches and deletes a note 3`] = `[]`;

exports[`Database notes inserts, fetches and deletes a note 4`] = `
[
  {
    "note": {
      "content": "Test note",
      "id": "",
      "position": 2024-01-01T05:00:00.000Z,
      "sender": {
        "id": "",
        "name": "user",
      },
      "timeSent": 2024-01-01T04:00:00.000Z,
    },
    "read": false,
  },
]
`;
